# hh_vacan_BD

./: README.md  main.py  pyproject.toml
src/: API_hh.py  config.py  create_db.py  database.ini  db_manager.py  logger.py  vacancies_list.py  vacancy.py
